mpam/target/generated-sources/antlr4/firstPathTryParser.py
# Generated from firstPathTry.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


from mpam.types import Dir 




class firstPathTryParser ( Parser ):

    grammarFileName = "firstPathTry.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "'drop'", "'@'", 
                     "'at'", "'of'", "'cols'", "'columns'", "'col'", "'column'", 
                     "'rows'", "'row'", "'pads'", "'steps'", "'pad'", "'step'", 
                     "'**__**'", "'+'", "''s'", "'/'", "':'", "'*'", "'-'", 
                     "'left'", "'right'", "'east'", "'west'", "'up'", "'down'", 
                     "'north'", "'south'", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ADD", "ATTR", 
                      "DIV", "INJECT", "MUL", "SUB", "LEFT", "RIGHT", "EAST", 
                      "WEST", "UP", "DOWN", "NORTH", "SOUTH", "TERMINATOR", 
                      "ID", "INT", "FLOAT", "STRING", "EOL_COMMENT", "COMMENT", 
                      "WS" ]

    RULE_expr = 0
    RULE_horiz_unit = 1
    RULE_vert_unit = 2
    RULE_undirected_unit = 3
    RULE_horiz_dir = 4
    RULE_vertical_dir = 5
    RULE_name = 6
    RULE_kwd_names = 7

    ruleNames =  [ "expr", "horiz_unit", "vert_unit", "undirected_unit", 
                   "horiz_dir", "vertical_dir", "name", "kwd_names" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    ADD=19
    ATTR=20
    DIV=21
    INJECT=22
    MUL=23
    SUB=24
    LEFT=25
    RIGHT=26
    EAST=27
    WEST=28
    UP=29
    DOWN=30
    NORTH=31
    SOUTH=32
    TERMINATOR=33
    ID=34
    INT=35
    FLOAT=36
    STRING=37
    EOL_COMMENT=38
    COMMENT=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return firstPathTryParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class Paren_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a firstPathTryParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(firstPathTryParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParen_expr" ):
                listener.enterParen_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParen_expr" ):
                listener.exitParen_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParen_expr" ):
                return visitor.visitParen_expr(self)
            else:
                return visitor.visitChildren(self)


    class Int_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a firstPathTryParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(firstPathTryParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt_expr" ):
                listener.enterInt_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt_expr" ):
                listener.exitInt_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt_expr" ):
                return visitor.visitInt_expr(self)
            else:
                return visitor.visitChildren(self)


    class Coord_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a firstPathTryParser.ExprContext
            super().__init__(parser)
            self.first = None # ExprContext
            self.second = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(firstPathTryParser.ExprContext)
            else:
                return self.getTypedRuleContext(firstPathTryParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCoord_expr" ):
                listener.enterCoord_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCoord_expr" ):
                listener.exitCoord_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCoord_expr" ):
                return visitor.visitCoord_expr(self)
            else:
                return visitor.visitChildren(self)


    class Horiz_distContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a firstPathTryParser.ExprContext
            super().__init__(parser)
            self.dist = None # ExprContext
            self.unit_dist = None # Token
            self.base = None # ExprContext
            self.copyFrom(ctx)

        def horiz_dir(self):
            return self.getTypedRuleContext(firstPathTryParser.Horiz_dirContext,0)

        def INT(self):
            return self.getToken(firstPathTryParser.INT, 0)
        def horiz_unit(self):
            return self.getTypedRuleContext(firstPathTryParser.Horiz_unitContext,0)

        def undirected_unit(self):
            return self.getTypedRuleContext(firstPathTryParser.Undirected_unitContext,0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(firstPathTryParser.ExprContext)
            else:
                return self.getTypedRuleContext(firstPathTryParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHoriz_dist" ):
                listener.enterHoriz_dist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHoriz_dist" ):
                listener.exitHoriz_dist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHoriz_dist" ):
                return visitor.visitHoriz_dist(self)
            else:
                return visitor.visitChildren(self)


    class Injection_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a firstPathTryParser.ExprContext
            super().__init__(parser)
            self.who = None # ExprContext
            self.what = None # ExprContext
            self.copyFrom(ctx)

        def INJECT(self):
            return self.getToken(firstPathTryParser.INJECT, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(firstPathTryParser.ExprContext)
            else:
                return self.getTypedRuleContext(firstPathTryParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInjection_expr" ):
                listener.enterInjection_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInjection_expr" ):
                listener.exitInjection_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInjection_expr" ):
                return visitor.visitInjection_expr(self)
            else:
                return visitor.visitChildren(self)


    class Drop_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a firstPathTryParser.ExprContext
            super().__init__(parser)
            self.loc = None # ExprContext
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(firstPathTryParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDrop_expr" ):
                listener.enterDrop_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDrop_expr" ):
                listener.exitDrop_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDrop_expr" ):
                return visitor.visitDrop_expr(self)
            else:
                return visitor.visitChildren(self)


    class Function_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a firstPathTryParser.ExprContext
            super().__init__(parser)
            self._expr = None # ExprContext
            self.args = list() # of ExprContexts
            self.copyFrom(ctx)

        def name(self):
            return self.getTypedRuleContext(firstPathTryParser.NameContext,0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(firstPathTryParser.ExprContext)
            else:
                return self.getTypedRuleContext(firstPathTryParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_expr" ):
                listener.enterFunction_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_expr" ):
                listener.exitFunction_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_expr" ):
                return visitor.visitFunction_expr(self)
            else:
                return visitor.visitChildren(self)


    class Name_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a firstPathTryParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def name(self):
            return self.getTypedRuleContext(firstPathTryParser.NameContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName_expr" ):
                listener.enterName_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName_expr" ):
                listener.exitName_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName_expr" ):
                return visitor.visitName_expr(self)
            else:
                return visitor.visitChildren(self)


    class Addsub_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a firstPathTryParser.ExprContext
            super().__init__(parser)
            self.lhs = None # ExprContext
            self.rhs = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(firstPathTryParser.ExprContext)
            else:
                return self.getTypedRuleContext(firstPathTryParser.ExprContext,i)

        def ADD(self):
            return self.getToken(firstPathTryParser.ADD, 0)
        def SUB(self):
            return self.getToken(firstPathTryParser.SUB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddsub_expr" ):
                listener.enterAddsub_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddsub_expr" ):
                listener.exitAddsub_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddsub_expr" ):
                return visitor.visitAddsub_expr(self)
            else:
                return visitor.visitChildren(self)


    class Muldiv_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a firstPathTryParser.ExprContext
            super().__init__(parser)
            self.lhs = None # ExprContext
            self.rhs = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(firstPathTryParser.ExprContext)
            else:
                return self.getTypedRuleContext(firstPathTryParser.ExprContext,i)

        def MUL(self):
            return self.getToken(firstPathTryParser.MUL, 0)
        def DIV(self):
            return self.getToken(firstPathTryParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMuldiv_expr" ):
                listener.enterMuldiv_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMuldiv_expr" ):
                listener.exitMuldiv_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMuldiv_expr" ):
                return visitor.visitMuldiv_expr(self)
            else:
                return visitor.visitChildren(self)


    class Attr_exprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a firstPathTryParser.ExprContext
            super().__init__(parser)
            self.obj = None # ExprContext
            self._name = None # NameContext
            self.attr = list() # of NameContexts
            self.copyFrom(ctx)

        def ATTR(self):
            return self.getToken(firstPathTryParser.ATTR, 0)
        def expr(self):
            return self.getTypedRuleContext(firstPathTryParser.ExprContext,0)

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(firstPathTryParser.NameContext)
            else:
                return self.getTypedRuleContext(firstPathTryParser.NameContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_expr" ):
                listener.enterAttr_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_expr" ):
                listener.exitAttr_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttr_expr" ):
                return visitor.visitAttr_expr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = firstPathTryParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = firstPathTryParser.Paren_exprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 17
                self.match(firstPathTryParser.T__0)
                self.state = 18
                self.expr(0)
                self.state = 19
                self.match(firstPathTryParser.T__1)
                pass

            elif la_ == 2:
                localctx = firstPathTryParser.Coord_exprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 21
                self.match(firstPathTryParser.T__0)
                self.state = 22
                localctx.first = self.expr(0)
                self.state = 23
                self.match(firstPathTryParser.T__2)
                self.state = 24
                localctx.second = self.expr(0)
                self.state = 25
                self.match(firstPathTryParser.T__1)
                pass

            elif la_ == 3:
                localctx = firstPathTryParser.Drop_exprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 27
                self.match(firstPathTryParser.T__3)
                self.state = 28
                _la = self._input.LA(1)
                if not(_la==firstPathTryParser.T__4 or _la==firstPathTryParser.T__5):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 29
                localctx.loc = self.expr(12)
                pass

            elif la_ == 4:
                localctx = firstPathTryParser.Horiz_distContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 30
                localctx.unit_dist = self.match(firstPathTryParser.INT)
                self.state = 31
                if not  (0 if localctx.unit_dist is None else int(localctx.unit_dist.text))==1:
                    from antlr4.error.Errors import FailedPredicateException
                    raise FailedPredicateException(self, " $unit_dist.int==1")
                self.state = 34
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 32
                    self.horiz_unit(True)

                elif la_ == 2:
                    self.state = 33
                    self.undirected_unit(True)


                self.state = 36
                self.horiz_dir()
                self.state = 39
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 37
                    self.match(firstPathTryParser.T__6)
                    self.state = 38
                    localctx.base = self.expr(0)


                pass

            elif la_ == 5:
                localctx = firstPathTryParser.Horiz_distContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 41
                localctx.unit_dist = self.match(firstPathTryParser.INT)
                self.state = 42
                if not  (0 if localctx.unit_dist is None else int(localctx.unit_dist.text))==1:
                    from antlr4.error.Errors import FailedPredicateException
                    raise FailedPredicateException(self, " $unit_dist.int==1")
                self.state = 43
                self.horiz_unit(True)
                pass

            elif la_ == 6:
                localctx = firstPathTryParser.Function_exprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 44
                self.name()
                self.state = 45
                self.match(firstPathTryParser.T__0)
                self.state = 46
                localctx._expr = self.expr(0)
                localctx.args.append(localctx._expr)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==firstPathTryParser.T__2:
                    self.state = 47
                    self.match(firstPathTryParser.T__2)
                    self.state = 48
                    localctx._expr = self.expr(0)
                    localctx.args.append(localctx._expr)
                    self.state = 53
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 54
                self.match(firstPathTryParser.T__1)
                pass

            elif la_ == 7:
                localctx = firstPathTryParser.Name_exprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 56
                self.name()
                pass

            elif la_ == 8:
                localctx = firstPathTryParser.Int_exprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 57
                self.match(firstPathTryParser.INT)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 90
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 88
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = firstPathTryParser.Muldiv_exprContext(self, firstPathTryParser.ExprContext(self, _parentctx, _parentState))
                        localctx.lhs = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 60
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 61
                        _la = self._input.LA(1)
                        if not(_la==firstPathTryParser.DIV or _la==firstPathTryParser.MUL):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 62
                        localctx.rhs = self.expr(7)
                        pass

                    elif la_ == 2:
                        localctx = firstPathTryParser.Addsub_exprContext(self, firstPathTryParser.ExprContext(self, _parentctx, _parentState))
                        localctx.lhs = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 63
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 64
                        _la = self._input.LA(1)
                        if not(_la==firstPathTryParser.ADD or _la==firstPathTryParser.SUB):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 65
                        localctx.rhs = self.expr(6)
                        pass

                    elif la_ == 3:
                        localctx = firstPathTryParser.Injection_exprContext(self, firstPathTryParser.ExprContext(self, _parentctx, _parentState))
                        localctx.who = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 66
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 67
                        self.match(firstPathTryParser.INJECT)
                        self.state = 68
                        localctx.what = self.expr(5)
                        pass

                    elif la_ == 4:
                        localctx = firstPathTryParser.Horiz_distContext(self, firstPathTryParser.ExprContext(self, _parentctx, _parentState))
                        localctx.dist = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 69
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 72
                        self._errHandler.sync(self)
                        la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                        if la_ == 1:
                            self.state = 70
                            self.horiz_unit(False)

                        elif la_ == 2:
                            self.state = 71
                            self.undirected_unit(False)


                        self.state = 74
                        self.horiz_dir()
                        self.state = 77
                        self._errHandler.sync(self)
                        la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                        if la_ == 1:
                            self.state = 75
                            self.match(firstPathTryParser.T__6)
                            self.state = 76
                            localctx.base = self.expr(0)


                        pass

                    elif la_ == 5:
                        localctx = firstPathTryParser.Horiz_distContext(self, firstPathTryParser.ExprContext(self, _parentctx, _parentState))
                        localctx.dist = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 79
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 80
                        self.horiz_unit(False)
                        pass

                    elif la_ == 6:
                        localctx = firstPathTryParser.Attr_exprContext(self, firstPathTryParser.ExprContext(self, _parentctx, _parentState))
                        localctx.obj = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 81
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 82
                        self.match(firstPathTryParser.ATTR)
                        self.state = 84 
                        self._errHandler.sync(self)
                        _alt = 1
                        while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                            if _alt == 1:
                                self.state = 83
                                localctx._name = self.name()
                                localctx.attr.append(localctx._name)

                            else:
                                raise NoViableAltException(self)
                            self.state = 86 
                            self._errHandler.sync(self)
                            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                        pass

             
                self.state = 92
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Horiz_unitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1, sing:bool=None):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.sing = None
            self.sing = sing


        def getRuleIndex(self):
            return firstPathTryParser.RULE_horiz_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHoriz_unit" ):
                listener.enterHoriz_unit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHoriz_unit" ):
                listener.exitHoriz_unit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHoriz_unit" ):
                return visitor.visitHoriz_unit(self)
            else:
                return visitor.visitChildren(self)




    def horiz_unit(self, sing:bool):

        localctx = firstPathTryParser.Horiz_unitContext(self, self._ctx, self.state, sing)
        self.enterRule(localctx, 2, self.RULE_horiz_unit)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.match(firstPathTryParser.T__7)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.match(firstPathTryParser.T__8)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 95
                if not  localctx.sing :
                    from antlr4.error.Errors import FailedPredicateException
                    raise FailedPredicateException(self, " $sing ")
                self.state = 96
                self.match(firstPathTryParser.T__9)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 97
                if not  localctx.sing :
                    from antlr4.error.Errors import FailedPredicateException
                    raise FailedPredicateException(self, " $sing ")
                self.state = 98
                self.match(firstPathTryParser.T__10)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vert_unitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1, sing:bool=None):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.sing = None
            self.sing = sing


        def getRuleIndex(self):
            return firstPathTryParser.RULE_vert_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVert_unit" ):
                listener.enterVert_unit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVert_unit" ):
                listener.exitVert_unit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVert_unit" ):
                return visitor.visitVert_unit(self)
            else:
                return visitor.visitChildren(self)




    def vert_unit(self, sing:bool):

        localctx = firstPathTryParser.Vert_unitContext(self, self._ctx, self.state, sing)
        self.enterRule(localctx, 4, self.RULE_vert_unit)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.match(firstPathTryParser.T__11)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                if not  localctx.sing :
                    from antlr4.error.Errors import FailedPredicateException
                    raise FailedPredicateException(self, " $sing ")
                self.state = 103
                self.match(firstPathTryParser.T__12)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Undirected_unitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1, sing:bool=None):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.sing = None
            self.sing = sing

